Updated Docs & Job Offer Controller
